🔥Some layout issues fixed as:
- Links active with new behaviour
- Better main menu link sizes & copies

--- a/assets/_footer.sass
+++ b/assets/_footer.sass
@@ -19,6 +19,8 @@
   justify-content: space-between
   width: 100%
   @include navsPad()
+  .btn b
+    letter-spacing: 0.02rem
   @media (max-width: 640px)
     .contact-link.mode--design
       padding: .5rem 0
