--- a/assets/_modals.sass
+++ b/assets/_modals.sass
@@ -97,7 +97,7 @@
     flex-direction: column
     align-items: center
     justify-content: space-between
-    padding-top: 2em
+    padding: 2em 0
 
   .md-menu-item
     font-weight: 400
